--- a/style.css
+++ b/style.css
@@ -227,7 +227,7 @@ body{
 
 /*TECNOLOGIAS*/
 .tecnologias{
-    height: 90vh;
+    height: 100vh;
     background: rgb(27, 38, 49);
     display: flex;
     flex-direction: column;
@@ -396,6 +396,80 @@ body{
     top: 10px;
     right: 10px;
     cursor: pointer;
+}
+
+/*Contacto Mail*/
+
+.contacto{
+    font-family: 'Montserrat', sans-serif;
+    background: #f2f2f2;
+    height: 100vh;
+    display: flex;
+    background-image: linear-gradient(to top, rgba(0, 0, 0, .7) 0%, rgba(0, 0, 0, .7) 100%),url(/img/contacto/damian-zaleski-RYyr-k3Ysqg-unsplash.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    
+}
+
+.form{
+    background-color: #fff;
+    width: 90%;
+    margin: auto;
+    max-width: 400px;
+    border-radius: 1em;
+    padding: 3.5em 1.5em;
+}
+
+.form__container{
+    width: 100%;
+    display: grid;
+    gap: 1em;
+    grid-auto-columns: 100%;
+}
+
+.form__title{
+    text-align: center;
+    font-size: 1.9rem;
+    margin-bottom: .4em;
+}
+
+.form__input{
+    font-family: inherit;
+    font-size: 1rem;
+    padding: .8em 1em;
+    outline: none;
+    border: none;
+    border: 1px solid #bbb0b0;
+    border-radius: 0.2em;
+}
+
+.form__input--message{
+    resize: none;
+    padding: 1.8em 1em;
+    margin-bottom: .5em;
+}
+
+.form__cta{
+    font-family: inherit;
+    background-color: #089fe0;
+    color: #fff;
+    border: none;
+    font-weight: 300;
+    padding: .7em 0;
+    border-radius: .2em;
+    cursor: pointer;
+    font-weight: 400;
+}
+.form__cta:hover{
+    background-color: #0886bc;
+    font-weight: bold;
+}
+
+@media (max-width:450px){
+    .form{
+        padding: 3.5em 1em;
+    }
 }
 
 
