--- a/style.css
+++ b/style.css
@@ -204,8 +204,10 @@ body{
     padding: 30px;
 }
 
+
 .contenedor_texto{
     display: flex;
+    align-items: center;
 }
 
 .servicio_texto{
@@ -222,9 +224,17 @@ body{
     padding: 2px;
     border-radius: 50%;
     text-align: center;
-    background-image: linear-gradient(to top, #00c6fb 0%, #005bea 100%);
+    background-image: url(/img/servicios/item.svg);
     color: #fff;
     box-shadow: -1px 1px 3px 2px rgb(0, 0, 0, .5);
+}
+@media screen and (max-width: 370px){
+    .numero{
+        font-size: 15px;
+    }
+    .servicio_texto{
+        font-size: 10px;
+    }
 }
 
 /*MAPA*/
@@ -349,7 +359,7 @@ body{
 }
 
 
-}
+
 
 /*LOADER*/
 
@@ -479,6 +489,8 @@ body{
     margin-bottom: .5em;
 }
 
+/*Boton Mail*/
+
 .form__cta{
     font-family: inherit;
     background-color: #089fe0;
@@ -495,6 +507,62 @@ body{
     font-weight: bold;
 }
 
+/*----------------------------------------*/
+
+.button{
+    position: relative;
+    padding: 8px 16px;
+    background: #009579;
+    border: none;
+    outline: none;
+    border-radius: 2px;
+    cursor: pointer;
+}
+
+.button:active{
+    background: #007a63;
+}
+
+.button__texto{
+    font-weight: bold;
+    font-size: 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: #fff;
+    transition: all .2s;
+}
+
+.button--loading .button__texto{
+    visibility: hidden;
+    opacity: 0;
+}
+
+.button--loading::after{
+    content: "";
+    position: absolute;
+    width: 16px;
+    height: 16px;
+    /* background: red; */
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    border: 4px solid transparent;
+    border-top-color: #fff;
+    border-radius: 50%;
+    animation: button-loading-spinner 1s ease infinite;
+}   
+
+@keyframes button-loading-spinner{
+    from{
+        rotate: (0turn);
+    }
+    to{
+        transform: rotate(1turn);
+    }
+}
+
+/*----------------------------------------*/
 @media (max-width:450px){
     .form{
         padding: 3.5em 1em;
@@ -503,7 +571,7 @@ body{
 
 /*FOOTER*/
 .footer{
-    height: 50vh;
+    height: 60vh;
     border-top: 3px solid rgb(242, 242, 242, .6);
 }
 
@@ -541,6 +609,19 @@ body{
 
 .footer__frase{
     color: #fff;
+    display: block;
+    border-right: 4px solid;
+    text-align: center;
+    width: 179px;
+    max-width: fit-content;
+    width: 27ch;
+    animation: blink .5s infinite step-end alternate;
+    overflow: hidden;
+}
+@keyframes blink {
+    50%{
+        border-color: transparent;
+    }
 }
 
 .footer__info{
@@ -566,6 +647,7 @@ body{
     width: 50%;
     height: 20px;
     display: flex;
+    align-items: center;
     gap: 10px;
     cursor: pointer;
 }
@@ -610,9 +692,21 @@ body{
     color: #fff;
 }
 
+@media screen and (max-width:830px){
+    .footer__container-contacto{
+        width: 70%;
+        margin: 0 auto;
+        /* font-size: 15px; */
+    }
+}
+
 @media screen and (max-width:690px){
+    
+    .footer{
+        height: 80vh;
+    }
     .footer__container{
-        grid-template-rows: 75% 25%;
+        grid-template-rows: 65% 35%;
         grid-template-columns: auto;
     }
     .footer__info{
@@ -624,6 +718,11 @@ body{
         text-align: center;
         width: fit-content;
         min-width: fit-content;
+        font-size: 10px;
+        width: 80%;
+    }
+    .footer__container-contacto-2{
+        display: none;
     }
 }
 
@@ -644,8 +743,11 @@ body{
     .footer__info{
         flex-direction: column;
         justify-content: space-around;
-        align-items: flex-start;
+        align-items: center;
         padding-left: 30%;
+    }
+    .footer__container-contacto-2{
+        display: flex;
     }
 }
 
@@ -656,7 +758,7 @@ body{
     .footer__info{
         flex-direction: column;
         justify-content: space-around;
-        align-items: flex-start;
+        align-items: center;
         padding-left: 30%;
     }
 }
@@ -673,6 +775,7 @@ body{
 }
 .footer__texto-company p:hover{
     color: rgba(255, 255, 255, 0.511);
+    cursor: pointer;
 }
 
 
@@ -766,9 +869,15 @@ body{
     .nav{
         font-size: 1.2rem;
     }
+    .nav-translate{
+        width: 200px;
+        justify-content: center;
+        align-items: center;
+        justify-content: space-around;
+        transform: translate(10%);
+    }
     .tecnologia{
         width: 120px;
         height: 120px;
     }
-    
 }
