--- a/style.css
+++ b/style.css
@@ -601,6 +601,9 @@ body{
     justify-content: center;
     font-size: 2.9rem;
     color: #fff;
+    font-family: 'Roboto', sans-serif;
+
+    
 }
 .footer__iot{
     font-weight: bold;
