--- a/style.css
+++ b/style.css
@@ -114,6 +114,15 @@ body{
     margin-top: 120px;
     text-align: center;
     color: #fff;
+    height: 50px;
+    font-family: 'Roboto', sans-serif;
+
+}
+
+.beneficios{
+    color: red;
+    font-style: normal;
+    font-weight: bold;
 }
 
 .showcase__contenedor-imagenes{
@@ -170,6 +179,62 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
 }
+/*SHOWCASE LIGH-BOX*/
+
+/* .light-box{
+    width: 100%;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.871);
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+} */
+
+/* .contenedor__light-box{
+    width: 250px;
+    height: 70vh;
+    max-height: 460px;
+    background-color: #007a63;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-image: url(/img/showcase/uno.jpeg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    overflow: hidden;
+    border-radius: 10px;
+    z-index: 1000;
+}
+.contenedor__light-box-II{
+    background-image: url(/img/showcase/dos.jpeg);
+}
+.contenedor__light-box-III{
+    background-image: url(/img/showcase/tres.jpg);
+} */
+
+/* .close__light-box{
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    background: rgb(108, 14, 52);
+    top: 50px;
+    right: 35%;
+    left: 75%;
+    border-radius: 50%;
+    z-index: 100;
+    background-image: url(/img/icons/x.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+} */
+
+
+
 
 /*SERVICIOS*/
 .servicios{
@@ -602,7 +667,8 @@ body{
     font-size: 2.9rem;
     color: #fff;
     font-family: 'Roboto', sans-serif;
-
+    cursor: pointer;
+    
     
 }
 .footer__iot{
